--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">DevFolio</h1>
+        <h1 class="sitename">CS 376: Design Website</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -86,8 +86,8 @@
       <img src="assets/img/hero-img.jpg" alt="" data-aos="fade-in">
 
       <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
-        <h2>I am Morgan Freeman</h2>
-        <p><span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+        <h2>I am Rafay Syed</h2>
+        <p><span class="typed" data-typed-items="Designer, Developer, Explorer, Student"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
@@ -105,10 +105,9 @@
                 <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
               </div>
               <div class="col-lg-7 about-info">
-                <p><strong>Name: </strong> <span>Morgan Freeman</span></p>
-                <p><strong>Profile: </strong> <span>full stack developer</span></p>
-                <p><strong>Email: </strong> <span>contact@example.com</span></p>
-                <p><strong>Phone: </strong> <span>(617) 557-0089</span></p>
+                <p><strong>Name: </strong> <span>Rafay Syed</span></p>
+                <p><strong>Profile: </strong> <span>CS Student @ Williams College</span></p>
+                <p><strong>Email: </strong> <span>rms7@williams.edu</span></p>
               </div>
             </div>
 
