--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 the design process, from the ideation process all the way to the actual designing of interfaces. 
               </p>
               <p>
-                Throughout the course of this class I have completed in six design sprints that has helped me refine my design philosophy. I've learned 
+                Throughout the course of this class I have completed six design sprints that has helped me refine my design philosophy. I've learned 
                 about how to design for interactivity, accessibility, visual appeal, and more. Feel free to take a look at my design sprint portfolio. Thanks for browsing! 
               </p>
             </div>
@@ -165,7 +165,9 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>Feel free to browse through my portfolio!</p>
+        <p> 
+          Hover over each image to get a brief description 
+          and click on the link icon to jump to each corresponding design document! </p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -174,10 +176,9 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">App</li>
-            <li data-filter=".filter-product">Product</li>
-            <li data-filter=".filter-branding">Branding</li>
-            <li data-filter=".filter-books">Books</li>
+            <li data-filter=".filter-app">Evaluation</li>
+            <li data-filter=".filter-product">Redesign</li>
+            <li data-filter=".filter-branding">Creation</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
@@ -211,7 +212,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <img src="assets/img/portfolio/DS4NEW.png" class="img-fluid contain-img" alt="New Bookstore Catalog">
               <div class="portfolio-info">
                 <h4>DS4: Designing for Effectiveness</h4>
@@ -232,11 +233,13 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="assets/img/portfolio/product-2.jpg" class="img-fluid contain-img" alt="">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+              <img src="assets/img/portfolio/DS6.jpeg" class="img-fluid contain-img" alt="Pulse Broswer Extension">
               <div class="portfolio-info">
                 <h4>DS6: Design in Practice</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur</p>
+                <p>My team created Pulse, a browser extension that acts as a productivity timer to promote focused work sessions.
+                  Subtle nudges help reduce online distraction and encourage intentionality while online.
+                </p>
                 <a href="https://medium.com/@ndc2/pulse-a-chrome-extension-to-help-you-stay-on-task-d66606dd2929" target="_blank" title="DS6 Design Document" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -268,12 +271,6 @@
     <div class="container">
       <div class="copyright text-center ">
         <p>© <span>Copyright</span> <strong class="px-1 sitename">DevFolio</strong> <span>All Rights Reserved</span></p>
-      </div>
-      <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
