changed amazon img

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/portfolio/NewDS5.png" class="img-fluid contain-img" alt="Amazon's website interface">
+              <img src="assets/img/portfolio/AMAZONDS5.jpg" class="img-fluid contain-img" alt="Amazon's website interface">
               <div class="portfolio-info">
                 <h4>DS5: Accessibility Audits</h4>
                 <p>I evaluated Amazons interface through the lens of users with visual disabilities looking at accessibility standards and first-hand accounts.
